# path-of-levelling

./: LICENSE  README.md  components.json  index.html  package.json  vite.config.ts
.github/workflows/: build.yml  main.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  model.rs
src/components/: in-game-screen.tsx  levelling-guide-main.tsx  levelling-guide.tsx  main-screen.tsx  navbar.tsx  step-guide.tsx  test-screen.tsx
src/data/: level-tracker-areas.ts  level-tracker-gems.ts  level-tracker-quests.ts
src/data/guides/: league-starter.guide.json  speed-leveling.guide.json
src/hooks/: useInterval.ts  useMachine.ts
src/interfaces/: guide-import.interface.ts  guide.interface.ts  types.ts
src/pages/: layout-map.page.tsx  main-routes.tsx  main.page.tsx  settings.page.tsx
src/states/: app.state.ts
src/store/: app.store.ts  guide.store.ts  settings.store.ts
src/utilities/: constants.ts  guide.schema.ts  guide.utilities.ts  router.tsx  save-localstorage.ts  tauri.utilities.ts
src/utils/: guide.utilities.ts  save-guide.ts
